--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "^2.4.0",
+    "cordova-plugin-facebook4": "^2.5.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.5",
@@ -160,7 +160,7 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "979725632076019",
         "APP_NAME": "Fluster",
-        "ANDROID_SDK_VERSION": "4.+"
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.+"
       }
     }
   }
