--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "cordova-plugin-googleplus": "^5.3.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.1.0",
+    "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -151,17 +151,17 @@
         "ANDROID_SUPPORT_V13_VERSION": "27.+",
         "FCM_VERSION": "11.8.0"
       },
-      "cordova-plugin-ionic-webview": {},
       "cordova.plugins.diagnostic": {},
       "branch-cordova-sdk": {},
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.664467771927-7k907sfgd4i4u81q67n4e8ve6t8pl2u4"
+        "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}"
       },
       "cordova-plugin-facebook4": {
-        "APP_ID": "979725632076019",
+        "APP_ID": "{{FACEBOOK_APP_ID}}",
         "APP_NAME": "Fluster",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.+"
-      }
+      },
+      "cordova-plugin-ionic-webview": {}
     }
   }
 }
