--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "^2.5.0",
+    "cordova-plugin-facebook4": "^3.0.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.5",
@@ -156,12 +156,12 @@
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}"
       },
+      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "{{FACEBOOK_APP_ID}}",
         "APP_NAME": "Fluster",
-        "FACEBOOK_ANDROID_SDK_VERSION": "4.+"
-      },
-      "cordova-plugin-ionic-webview": {}
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.36.0"
+      }
     }
   }
 }
