--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.5",
-    "cordova-plugin-googleplus": "^5.3.1",
+    "cordova-plugin-googleplus": "^5.3.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -141,7 +141,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-calendar": {
         "CALENDAR_USAGE_DESCRIPTION": "If you wish to export your viewings to your calendar, Fluster requires access to it"
       },
@@ -152,15 +151,17 @@
       },
       "cordova.plugins.diagnostic": {},
       "branch-cordova-sdk": {},
-      "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}"
-      },
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "{{FACEBOOK_APP_ID}}",
         "APP_NAME": "Fluster",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.36.0"
-      }
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
+        "PLAY_SERVICES_VERSION": "11.8.0"
+      },
+      "cordova-plugin-ionic-keyboard": {}
     }
   }
 }
