--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fluster",
   "author": "Fluster",
   "homepage": "https://fluster.io",
-  "version": "5.0.0-beta.7",
+  "version": "5.0.0-rc.0",
   "scripts": {
     "ng": "ng",
     "start": "ionic serve",
