--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "branch-cordova-sdk": "^3.0.1",
+    "branch-cordova-sdk": "3.1.0",
     "cordova-android": "7.1.1",
     "cordova-ios": "4.5.5",
     "cordova-plugin-calendar": "^5.1.2",
@@ -56,7 +56,7 @@
     "cordova-plugin-googleplus": "^5.3.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-ionic-webview": "2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -150,8 +150,6 @@
         "FCM_VERSION": "11.8.0"
       },
       "cordova.plugins.diagnostic": {},
-      "branch-cordova-sdk": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "{{FACEBOOK_APP_ID}}",
         "APP_NAME": "Fluster",
@@ -161,7 +159,11 @@
         "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
         "PLAY_SERVICES_VERSION": "11.8.0"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "branch-cordova-sdk": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      }
     }
   }
 }
