--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "^3.0.0",
+    "cordova-plugin-facebook4": "3.1.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.5",
@@ -150,11 +150,6 @@
         "FCM_VERSION": "11.8.0"
       },
       "cordova.plugins.diagnostic": {},
-      "cordova-plugin-facebook4": {
-        "APP_ID": "{{FACEBOOK_APP_ID}}",
-        "APP_NAME": "Fluster",
-        "FACEBOOK_ANDROID_SDK_VERSION": "4.36.0"
-      },
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
         "PLAY_SERVICES_VERSION": "11.8.0"
@@ -163,6 +158,11 @@
       "branch-cordova-sdk": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-facebook4": {
+        "APP_ID": "{{FACEBOOK_APP_ID}}",
+        "APP_NAME": "Fluster",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.37.0"
       }
     }
   }
