lib: update Ionic v4-beta.15

--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "@ionic-native/social-sharing": "^v5.0.0-beta.21",
     "@ionic-native/splash-screen": "^v5.0.0-beta.21",
     "@ionic-native/status-bar": "^v5.0.0-beta.21",
-    "@ionic/angular": "^4.0.0-beta.13",
-    "@ionic/ng-toolkit": "^1.1.0",
-    "@ionic/schematics-angular": "^1.0.7",
+    "@ionic/angular": "^4.0.0-beta.15-0",
+    "@ionic/angular-toolkit": "^1.0.0",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
