--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "@ionic-native/splash-screen": "^v5.0.0-beta.21",
     "@ionic-native/status-bar": "^v5.0.0-beta.21",
     "@ionic/angular": "^4.0.0-beta.15-0",
-    "@ionic/ng-toolkit": "^1.1.0",
-    "@ionic/schematics-angular": "^1.0.7",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
@@ -79,14 +77,15 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.8.4",
-    "@angular-devkit/build-angular": "^0.8.4",
-    "@angular-devkit/core": "^0.8.4",
-    "@angular-devkit/schematics": "^0.8.4",
-    "@angular/cli": "^6.2.4",
+    "@angular-devkit/architect": "^0.8.5",
+    "@angular-devkit/build-angular": "^0.8.5",
+    "@angular-devkit/core": "^0.8.5",
+    "@angular-devkit/schematics": "^0.8.5",
+    "@angular/cli": "^6.2.5",
     "@angular/compiler": "6.1.9",
     "@angular/compiler-cli": "6.1.9",
     "@angular/language-service": "6.1.9",
+    "@ionic/angular-toolkit": "^1.0.0",
     "@types/facebook-js-sdk": "^2.8.6",
     "@types/google.analytics": "0.0.39",
     "@types/googlemaps": "^3.30.12",
