--- a/package.json
+++ b/package.json
@@ -47,18 +47,18 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "3.1.0",
+    "cordova-plugin-facebook4": "3.2.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.5",
     "cordova-plugin-googleplus": "^5.3.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "2.2.3",
+    "cordova-plugin-ionic-webview": "2.2.5",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-socialsharing": "^5.4.1",
+    "cordova-plugin-x-socialsharing": "5.4.3",
     "cordova.plugins.diagnostic": "^4.0.10",
     "core-js": "^2.5.7",
     "cropperjs": "^1.4.1",
@@ -140,7 +140,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-x-socialsharing": {},
       "phonegap-plugin-push": {
         "ANDROID_SUPPORT_V13_VERSION": "27.+",
         "FCM_VERSION": "11.8.0"
@@ -152,16 +151,19 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "branch-cordova-sdk": {},
-      "cordova-plugin-facebook4": {
-        "APP_ID": "{{FACEBOOK_APP_ID}}",
-        "APP_NAME": "Fluster",
-        "FACEBOOK_ANDROID_SDK_VERSION": "4.37.0"
-      },
       "cordova-plugin-calendar": {
         "CALENDAR_USAGE_DESCRIPTION": "If you wish to export your viewings to your calendar, Fluster requires access to it"
       },
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-facebook4": {
+        "APP_ID": "{{FACEBOOK_APP_ID}}",
+        "APP_NAME": "Fluster",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.38.1"
+      },
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       }
     }
   }
