--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.5",
-    "cordova-plugin-googleplus": "^5.3.2",
+    "cordova-plugin-googleplus": "6.0.0",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "2.3.1",
@@ -145,10 +145,6 @@
         "FCM_VERSION": "11.8.0"
       },
       "cordova.plugins.diagnostic": {},
-      "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
-        "PLAY_SERVICES_VERSION": "11.8.0"
-      },
       "cordova-plugin-ionic-keyboard": {},
       "branch-cordova-sdk": {},
       "cordova-plugin-calendar": {
@@ -164,6 +160,10 @@
       },
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
+        "PLAY_SERVICES_VERSION": "11.8.0"
       }
     }
   }
