--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "pwa-staging": "gulp rmmockup && gulp staging && gulp pwa && ionic build --prod --project pwa -c staging"
   },
   "dependencies": {
-    "@angular/common": "7.1.3",
-    "@angular/core": "7.1.3",
-    "@angular/forms": "7.1.3",
-    "@angular/http": "7.1.3",
-    "@angular/platform-browser": "7.1.3",
-    "@angular/platform-browser-dynamic": "7.1.3",
-    "@angular/pwa": "^0.11.3",
-    "@angular/router": "7.1.3",
-    "@angular/service-worker": "7.1.3",
+    "@angular/common": "7.1.4",
+    "@angular/core": "7.1.4",
+    "@angular/forms": "7.1.4",
+    "@angular/http": "7.1.4",
+    "@angular/platform-browser": "7.1.4",
+    "@angular/platform-browser-dynamic": "7.1.4",
+    "@angular/pwa": "^0.11.4",
+    "@angular/router": "7.1.4",
+    "@angular/service-worker": "7.1.4",
     "@ionic-native/camera": "^v5.0.0-beta.21",
     "@ionic-native/core": "^v5.0.0-beta.21",
     "@ionic-native/device": "^v5.0.0-beta.21",
@@ -36,7 +36,7 @@
     "@ionic-native/social-sharing": "^v5.0.0-beta.21",
     "@ionic-native/splash-screen": "^v5.0.0-beta.21",
     "@ionic-native/status-bar": "^v5.0.0-beta.21",
-    "@ionic/angular": "^4.0.0-beta.19",
+    "@ionic/angular": "^4.0.0-rc.0",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -60,7 +60,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "5.4.3",
     "cordova.plugins.diagnostic": "^4.0.10",
-    "core-js": "^2.6.0",
+    "core-js": "^2.6.1",
     "cropperjs": "^1.4.1",
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
@@ -77,23 +77,23 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.11.3",
-    "@angular-devkit/build-angular": "^0.11.3",
-    "@angular-devkit/core": "^7.1.3",
-    "@angular-devkit/schematics": "^7.1.3",
-    "@angular/cli": "^7.1.3",
-    "@angular/compiler": "7.1.3",
-    "@angular/compiler-cli": "7.1.3",
-    "@angular/language-service": "7.1.3",
-    "@ionic/angular-toolkit": "^1.2.0",
+    "@angular-devkit/architect": "^0.11.4",
+    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular-devkit/core": "^7.1.4",
+    "@angular-devkit/schematics": "^7.1.4",
+    "@angular/cli": "^7.1.4",
+    "@angular/compiler": "7.1.4",
+    "@angular/compiler-cli": "7.1.4",
+    "@angular/language-service": "7.1.4",
+    "@ionic/angular-toolkit": "^1.2.1",
     "@types/facebook-js-sdk": "^3.1.0",
     "@types/google.analytics": "0.0.39",
     "@types/googlemaps": "^3.30.12",
-    "@types/jasmine": "~3.3.1",
+    "@types/jasmine": "~3.3.4",
     "@types/jasminewd2": "~2.0.5",
-    "@types/node": "~10.12.15",
+    "@types/node": "~10.12.18",
     "@types/socket.io-client": "^1.4.32",
-    "@types/swiper": "^4.4.0",
+    "@types/swiper": "^4.4.1",
     "@types/underscore": "^1.8.9",
     "codelyzer": "~4.5.0",
     "del": "^3.0.0",
@@ -101,7 +101,7 @@
     "gulp-remove-code": "^3.0.3",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.3",
+    "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.3",
     "karma-jasmine": "~2.0.1",
@@ -109,10 +109,10 @@
     "ncp": "^2.0.0",
     "plist": "^3.0.1",
     "protractor": "~5.4.0",
-    "replace": "^1.0.0",
+    "replace": "^1.0.1",
     "replace-in-file": "^3.4.2",
     "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
+    "tslint": "~5.12.0",
     "typescript": "^3.1.6"
   },
   "description": "Fluster",
