--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "pwa-staging": "gulp rmmockup && gulp staging && gulp pwa && ionic build --prod --project pwa -c staging"
   },
   "dependencies": {
-    "@angular/common": "7.1.4",
-    "@angular/core": "7.1.4",
-    "@angular/forms": "7.1.4",
-    "@angular/http": "7.1.4",
-    "@angular/platform-browser": "7.1.4",
-    "@angular/platform-browser-dynamic": "7.1.4",
+    "@angular/common": "7.2.0",
+    "@angular/core": "7.2.0",
+    "@angular/forms": "7.2.0",
+    "@angular/http": "7.2.0",
+    "@angular/platform-browser": "7.2.0",
+    "@angular/platform-browser-dynamic": "7.2.0",
     "@angular/pwa": "^0.11.4",
-    "@angular/router": "7.1.4",
-    "@angular/service-worker": "7.1.4",
+    "@angular/router": "7.2.0",
+    "@angular/service-worker": "7.2.0",
     "@ionic-native/camera": "^v5.0.0-beta.21",
     "@ionic-native/core": "^v5.0.0-beta.21",
     "@ionic-native/device": "^v5.0.0-beta.21",
@@ -58,7 +58,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-socialsharing": "5.4.3",
+    "cordova-plugin-x-socialsharing": "5.4.4",
     "cordova.plugins.diagnostic": "^4.0.10",
     "core-js": "^2.6.1",
     "cropperjs": "^1.4.1",
@@ -82,14 +82,14 @@
     "@angular-devkit/core": "^7.1.4",
     "@angular-devkit/schematics": "^7.1.4",
     "@angular/cli": "^7.1.4",
-    "@angular/compiler": "7.1.4",
-    "@angular/compiler-cli": "7.1.4",
-    "@angular/language-service": "7.1.4",
-    "@ionic/angular-toolkit": "^1.2.1",
+    "@angular/compiler": "7.2.0",
+    "@angular/compiler-cli": "7.2.0",
+    "@angular/language-service": "7.2.0",
+    "@ionic/angular-toolkit": "^1.2.2",
     "@types/facebook-js-sdk": "^3.1.0",
     "@types/google.analytics": "0.0.39",
     "@types/googlemaps": "^3.30.12",
-    "@types/jasmine": "~3.3.4",
+    "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.5",
     "@types/node": "~10.12.18",
     "@types/socket.io-client": "^1.4.32",
@@ -108,7 +108,7 @@
     "karma-jasmine-html-reporter": "^1.3.1",
     "ncp": "^2.0.0",
     "plist": "^3.0.1",
-    "protractor": "~5.4.0",
+    "protractor": "~5.4.2",
     "replace": "^1.0.1",
     "replace-in-file": "^3.4.2",
     "ts-node": "~7.0.1",
@@ -150,20 +150,20 @@
       "cordova-plugin-calendar": {
         "CALENDAR_USAGE_DESCRIPTION": "If you wish to export your viewings to your calendar, Fluster requires access to it"
       },
-      "cordova-plugin-x-socialsharing": {
-        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      },
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.664467771927-7k907sfgd4i4u81q67n4e8ve6t8pl2u4",
         "PLAY_SERVICES_VERSION": "11.8.0"
       },
       "cordova-plugin-facebook4": {
-        "APP_ID": "{{FACEBOOK_APP_ID}}",
+        "APP_ID": "979725632076019",
         "APP_NAME": "Fluster",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.38.1"
       },
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       }
     }
   }
