--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@ionic-native/social-sharing": "^v5.0.0-beta.21",
     "@ionic-native/splash-screen": "^v5.0.0-beta.21",
     "@ionic-native/status-bar": "^v5.0.0-beta.21",
-    "@ionic/angular": "^4.0.0-rc.1",
+    "@ionic/angular": "^4.0.0-dev.201901151444.d3f214e",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
