--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "4.0.0",
+    "cordova-plugin-facebook4": "4.1.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.5",
@@ -154,16 +154,17 @@
         "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
         "PLAY_SERVICES_VERSION": "11.8.0"
       },
-      "cordova-plugin-facebook4": {
-        "APP_ID": "{{FACEBOOK_APP_ID}}",
-        "APP_NAME": "Fluster",
-        "FACEBOOK_ANDROID_SDK_VERSION": "4.38.1"
-      },
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
+      },
+      "cordova-plugin-facebook4": {
+        "APP_NAME": "Fluster",
+        "APP_ID": "{{FACEBOOK_APP_ID}}",
+        "FACEBOOK_HYBRID_APP_EVENTS": "false",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.38.1"
       }
     }
   }
