--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "branch-cordova-sdk": "3.1.5",
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-calendar": "5.1.3",
+    "cordova-plugin-calendar": "5.1.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
@@ -51,7 +51,7 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.5",
-    "cordova-plugin-googleplus": "6.0.0",
+    "cordova-plugin-googleplus": "7.0.0",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "3.0.0",
@@ -146,14 +146,6 @@
       },
       "cordova.plugins.diagnostic": {},
       "cordova-plugin-ionic-keyboard": {},
-      "branch-cordova-sdk": {},
-      "cordova-plugin-calendar": {
-        "CALENDAR_USAGE_DESCRIPTION": "If you wish to export your viewings to your calendar, Fluster requires access to it"
-      },
-      "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
-        "PLAY_SERVICES_VERSION": "11.8.0"
-      },
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
@@ -165,7 +157,16 @@
         "APP_ID": "{{FACEBOOK_APP_ID}}",
         "FACEBOOK_HYBRID_APP_EVENTS": "false",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.38.1"
-      }
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "{{GOOGLE_LOGIN_REVERSED_CLIENT_ID}}",
+        "PLAY_SERVICES_VERSION": "11.8.0"
+      },
+      "cordova-plugin-calendar": {
+        "CALENDAR_USAGE_DESCRIPTION": "If you wish to export your viewings to your calendar, Fluster requires access to it",
+        "CONTACTS_USAGE_DESCRIPTION": "If you wish to use your contacts, Fluster requires access to it"
+      },
+      "branch-cordova-sdk": {}
     }
   }
 }
