--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "pwa-staging": "gulp rmmockup && gulp staging && gulp pwa && ionic build --prod --project pwa -c staging"
   },
   "dependencies": {
-    "@angular/common": "7.2.0",
-    "@angular/core": "7.2.0",
-    "@angular/forms": "7.2.0",
-    "@angular/http": "7.2.0",
-    "@angular/platform-browser": "7.2.0",
-    "@angular/platform-browser-dynamic": "7.2.0",
-    "@angular/pwa": "^0.12.1",
-    "@angular/router": "7.2.0",
-    "@angular/service-worker": "7.2.0",
+    "@angular/common": "7.2.1",
+    "@angular/core": "7.2.1",
+    "@angular/forms": "7.2.1",
+    "@angular/http": "7.2.1",
+    "@angular/platform-browser": "7.2.1",
+    "@angular/platform-browser-dynamic": "7.2.1",
+    "@angular/pwa": "^0.12.2",
+    "@angular/router": "7.2.1",
+    "@angular/service-worker": "7.2.1",
     "@ionic-native/camera": "^v5.0.0-beta.21",
     "@ionic-native/core": "^v5.0.0-beta.21",
     "@ionic-native/device": "^v5.0.0-beta.21",
@@ -36,7 +36,7 @@
     "@ionic-native/social-sharing": "^v5.0.0-beta.21",
     "@ionic-native/splash-screen": "^v5.0.0-beta.21",
     "@ionic-native/status-bar": "^v5.0.0-beta.21",
-    "@ionic/angular": "^4.0.0-dev.201901151444.d3f214e",
+    "@ionic/angular": "^4.0.0-rc.2",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -60,7 +60,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "5.4.4",
     "cordova.plugins.diagnostic": "^4.0.10",
-    "core-js": "^2.6.1",
+    "core-js": "^2.6.2",
     "cropperjs": "^1.4.1",
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
@@ -74,17 +74,17 @@
     "underscore": "^1.9.1",
     "web-photo-filter": "^2.1.0",
     "web-social-share": "^2.1.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.28"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.12.1",
-    "@angular-devkit/build-angular": "^0.12.1",
-    "@angular-devkit/core": "^7.2.1",
-    "@angular-devkit/schematics": "^7.2.1",
-    "@angular/cli": "^7.2.1",
-    "@angular/compiler": "7.2.0",
-    "@angular/compiler-cli": "7.2.0",
-    "@angular/language-service": "7.2.0",
+    "@angular-devkit/architect": "^0.12.2",
+    "@angular-devkit/build-angular": "^0.12.2",
+    "@angular-devkit/core": "^7.2.2",
+    "@angular-devkit/schematics": "^7.2.2",
+    "@angular/cli": "^7.2.2",
+    "@angular/compiler": "7.2.1",
+    "@angular/compiler-cli": "7.2.1",
+    "@angular/language-service": "7.2.1",
     "@ionic/angular-toolkit": "^1.2.2",
     "@types/facebook-js-sdk": "^3.1.0",
     "@types/google.analytics": "0.0.39",
@@ -110,9 +110,9 @@
     "plist": "^3.0.1",
     "protractor": "~5.4.2",
     "replace": "^1.0.1",
-    "replace-in-file": "^3.4.2",
+    "replace-in-file": "^3.4.3",
     "ts-node": "~7.0.1",
-    "tslint": "~5.12.0",
+    "tslint": "~5.12.1",
     "typescript": "^3.1.6"
   },
   "description": "Fluster",
