--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "cordova-plugin-googleplus": "7.0.0",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "3.0.0",
+    "cordova-plugin-ionic-webview": "3.1.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -146,9 +146,6 @@
       },
       "cordova.plugins.diagnostic": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       },
@@ -166,7 +163,10 @@
         "CALENDAR_USAGE_DESCRIPTION": "If you wish to export your viewings to your calendar, Fluster requires access to it",
         "CONTACTS_USAGE_DESCRIPTION": "If you wish to use your contacts, Fluster requires access to it"
       },
-      "branch-cordova-sdk": {}
+      "branch-cordova-sdk": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      }
     }
   }
 }
