--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
     "@angular/http": "7.2.2",
     "@angular/platform-browser": "7.2.2",
     "@angular/platform-browser-dynamic": "7.2.2",
-    "@angular/pwa": "^0.12.2",
+    "@angular/pwa": "^0.12.3",
     "@angular/router": "7.2.2",
     "@angular/service-worker": "7.2.2",
-    "@ionic-native/camera": "^v5.0.0-beta.21",
-    "@ionic-native/core": "^v5.0.0-beta.21",
-    "@ionic-native/device": "^v5.0.0-beta.21",
-    "@ionic-native/facebook": "^v5.0.0-beta.21",
-    "@ionic-native/file": "^v5.0.0-beta.21",
-    "@ionic-native/google-analytics": "^v5.0.0-beta.21",
-    "@ionic-native/google-plus": "^v5.0.0-beta.21",
-    "@ionic-native/in-app-browser": "^v5.0.0-beta.21",
-    "@ionic-native/ionic-webview": "^v5.0.0-beta.21",
-    "@ionic-native/push": "^v5.0.0-beta.21",
-    "@ionic-native/social-sharing": "^v5.0.0-beta.21",
-    "@ionic-native/splash-screen": "^v5.0.0-beta.21",
-    "@ionic-native/status-bar": "^v5.0.0-beta.21",
-    "@ionic/angular": "^4.0.0-rc.3",
+    "@ionic-native/camera": "^v5.0.0",
+    "@ionic-native/core": "^v5.0.0",
+    "@ionic-native/device": "^v5.0.0",
+    "@ionic-native/facebook": "^v5.0.0",
+    "@ionic-native/file": "^v5.0.0",
+    "@ionic-native/google-analytics": "^v5.0.0",
+    "@ionic-native/google-plus": "^v5.0.0",
+    "@ionic-native/in-app-browser": "^v5.0.0",
+    "@ionic-native/ionic-webview": "^v5.0.0",
+    "@ionic-native/push": "^v5.0.0",
+    "@ionic-native/social-sharing": "^v5.0.0",
+    "@ionic-native/splash-screen": "^v5.0.0",
+    "@ionic-native/status-bar": "^v5.0.0",
+    "@ionic/angular": "^4.0.0",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -77,11 +77,11 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.12.2",
-    "@angular-devkit/build-angular": "^0.12.2",
-    "@angular-devkit/core": "^7.2.2",
-    "@angular-devkit/schematics": "^7.2.2",
-    "@angular/cli": "^7.2.2",
+    "@angular-devkit/architect": "^0.12.3",
+    "@angular-devkit/build-angular": "^0.12.3",
+    "@angular-devkit/core": "^7.2.3",
+    "@angular-devkit/schematics": "^7.2.3",
+    "@angular/cli": "^7.2.3",
     "@angular/compiler": "7.2.2",
     "@angular/compiler-cli": "7.2.2",
     "@angular/language-service": "7.2.2",
