--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "pwa-staging": "gulp rmmockup && gulp staging && gulp pwa && ionic build --prod --project pwa -c staging"
   },
   "dependencies": {
-    "@angular/common": "7.2.2",
-    "@angular/core": "7.2.2",
-    "@angular/forms": "7.2.2",
-    "@angular/http": "7.2.2",
-    "@angular/platform-browser": "7.2.2",
-    "@angular/platform-browser-dynamic": "7.2.2",
-    "@angular/pwa": "^0.12.3",
-    "@angular/router": "7.2.2",
-    "@angular/service-worker": "7.2.2",
+    "@angular/common": "7.2.4",
+    "@angular/core": "7.2.4",
+    "@angular/forms": "7.2.4",
+    "@angular/http": "7.2.4",
+    "@angular/platform-browser": "7.2.4",
+    "@angular/platform-browser-dynamic": "7.2.4",
+    "@angular/pwa": "^0.13.1",
+    "@angular/router": "7.2.4",
+    "@angular/service-worker": "7.2.4",
     "@ionic-native/camera": "^v5.0.0",
     "@ionic-native/core": "^v5.0.0",
     "@ionic-native/device": "^v5.0.0",
@@ -36,31 +36,31 @@
     "@ionic-native/social-sharing": "^v5.0.0",
     "@ionic-native/splash-screen": "^v5.0.0",
     "@ionic-native/status-bar": "^v5.0.0",
-    "@ionic/angular": "^4.0.0",
+    "@ionic/angular": "^4.0.1",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "branch-cordova-sdk": "3.1.5",
+    "branch-cordova-sdk": "^3.1.5",
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-calendar": "5.1.4",
+    "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "4.1.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-google-analytics": "^1.8.5",
-    "cordova-plugin-googleplus": "7.0.0",
+    "cordova-plugin-google-analytics": "^1.8.6",
+    "cordova-plugin-googleplus": "^7.0.0",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "3.1.1",
+    "cordova-plugin-ionic-webview": "^3.1.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-socialsharing": "5.4.4",
-    "cordova.plugins.diagnostic": "^4.0.10",
-    "core-js": "^2.6.3",
+    "cordova-plugin-x-socialsharing": "^5.4.4",
+    "cordova.plugins.diagnostic": "^4.0.11",
+    "core-js": "^2.6.4",
     "cropperjs": "^1.4.1",
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
@@ -68,7 +68,7 @@
     "moment": "^2.24.0",
     "phonegap-plugin-push": "^2.2.3",
     "raven-js": "^3.27.0",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.4.0",
     "sass-mediaqueries": "^1.6.1",
     "socket.io-client": "^2.2.0",
     "underscore": "^1.9.1",
@@ -77,21 +77,21 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.12.3",
-    "@angular-devkit/build-angular": "^0.12.3",
-    "@angular-devkit/core": "^7.2.3",
-    "@angular-devkit/schematics": "^7.2.3",
-    "@angular/cli": "^7.2.3",
-    "@angular/compiler": "7.2.2",
-    "@angular/compiler-cli": "7.2.2",
-    "@angular/language-service": "7.2.2",
-    "@ionic/angular-toolkit": "^1.2.2",
+    "@angular-devkit/architect": "^0.13.1",
+    "@angular-devkit/build-angular": "^0.13.1",
+    "@angular-devkit/core": "^7.3.1",
+    "@angular-devkit/schematics": "^7.3.1",
+    "@angular/cli": "^7.3.1",
+    "@angular/compiler": "7.2.4",
+    "@angular/compiler-cli": "7.2.4",
+    "@angular/language-service": "7.2.4",
+    "@ionic/angular-toolkit": "^1.3.0",
     "@types/facebook-js-sdk": "^3.2.0",
     "@types/google.analytics": "0.0.39",
     "@types/googlemaps": "^3.30.12",
-    "@types/jasmine": "~3.3.7",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.5",
-    "@types/node": "~10.12.18",
+    "@types/node": "~10.12.24",
     "@types/socket.io-client": "^1.4.32",
     "@types/swiper": "^4.4.1",
     "@types/underscore": "^1.8.9",
@@ -101,7 +101,7 @@
     "gulp-remove-code": "^3.0.3",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.3",
     "karma-jasmine": "~2.0.1",
@@ -111,7 +111,7 @@
     "protractor": "~5.4.2",
     "replace": "^1.0.1",
     "replace-in-file": "^3.4.3",
-    "ts-node": "~8.0.1",
+    "ts-node": "~8.0.2",
     "tslint": "~5.12.1",
     "typescript": "^3.1.6"
   },
