--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "branch-cordova-sdk": "^3.1.5",
     "cordova-android": "7.1.4",
-    "cordova-ios": "4.5.5",
+    "cordova-ios": "5.0.0",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
@@ -118,8 +118,8 @@
   "description": "Fluster",
   "cordova": {
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "es6-promise-plugin": {},
