--- a/package.json
+++ b/package.json
@@ -40,26 +40,26 @@
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "branch-cordova-sdk": "^3.1.5",
+    "branch-cordova-sdk": "3.1.6",
     "cordova-android": "7.1.4",
     "cordova-ios": "5.0.0",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "4.2.0",
+    "cordova-plugin-facebook4": "4.2.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-google-analytics": "^1.8.6",
     "cordova-plugin-googleplus": "^7.0.0",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "3.1.2",
+    "cordova-plugin-ionic-webview": "4.0.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.4",
-    "cordova.plugins.diagnostic": "^4.0.11",
+    "cordova.plugins.diagnostic": "4.0.12",
     "core-js": "^2.6.5",
     "cropperjs": "^1.5.1",
     "es6-promise-plugin": "^4.2.2",
@@ -144,7 +144,6 @@
         "ANDROID_SUPPORT_V13_VERSION": "27.+",
         "FCM_VERSION": "11.8.0"
       },
-      "cordova.plugins.diagnostic": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
@@ -158,14 +157,17 @@
         "CONTACTS_USAGE_DESCRIPTION": "If you wish to use your contacts, Fluster requires access to it"
       },
       "branch-cordova-sdk": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-facebook4": {
         "APP_ID": "{{FACEBOOK_APP_ID}}",
         "APP_NAME": "Fluster",
         "FACEBOOK_HYBRID_APP_EVENTS": "false",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.40.0"
+      },
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova.plugins.diagnostic": {
+        "ANDROID_SUPPORT_VERSION": "28.+"
       }
     }
   }
